--- a/_base/_content.html
+++ b/_base/_content.html
@@ -26,3 +26,5 @@
   <p>Credit: <%= COPY.labels.credit %></p>
   <% } %>
 </div>
+
+<button value="export chart as svg" onclick="exportSvg()" class="export-svg-button">Export SVG</button>
