--- a/_base/index.html
+++ b/_base/index.html
@@ -8,6 +8,7 @@
     <meta name="robots" content="noindex" />
     <base target="_blank">
     <link rel="stylesheet" href="./graphic.css">
+    <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
     <script>window.GOOGLE_ANALYTICS_ID = "<%= config.analyticsID %>";</script>
 </head>
 <body>
