removing credit from templates

--- a/annotated_line_chart/_content.html
+++ b/annotated_line_chart/_content.html
@@ -23,7 +23,7 @@
 
 <div class="footer">
   <% if (COPY.labels.source) { %><p>Source: <%= COPY.labels.source %></p><% } %>
-  <% if (COPY.labels.credit) { %><p>Credit: <%= COPY.labels.credit %></p><% } %>
+  <% if (COPY.labels.credit) { %><p><%= COPY.labels.credit %></p><% } %>
 </div>
 
 <script type="text/javascript">
