--- a/_base/_content.html
+++ b/_base/_content.html
@@ -23,6 +23,6 @@
   <% } %>
   
   <% if (COPY.labels.credit) { %>
-  <p>Credit: <%= COPY.labels.credit %></p>
+  <p><%= COPY.labels.credit %></p>
   <% } %>
 </div>
