--- a/ai2html_graphic/_content.html
+++ b/ai2html_graphic/_content.html
@@ -23,5 +23,5 @@
 
 <div class="footer">
   <% if (COPY.labels.source) { %><p>Source: <%= COPY.labels.source %></p><% } %>
-  <% if (COPY.labels.credit) { %><p>Credit: <%= COPY.labels.credit %></p><% } %>
+  <% if (COPY.labels.credit) { %><p> <%= COPY.labels.credit %></p><% } %>
 </div>
