--- a/d3_graphic/_content.html
+++ b/d3_graphic/_content.html
@@ -23,7 +23,7 @@ aria-label="<%- COPY.labels.screenreader %>"
 
 <div class="footer">
     <% if (COPY.labels.source) { %><p>Source: <%= COPY.labels.source %></p><% } %>
-    <% if (COPY.labels.credit) { %><p>Credit: <%= COPY.labels.credit %></p><% } %>
+    <% if (COPY.labels.credit) { %><p> <%= COPY.labels.credit %></p><% } %>
 </div>
 
 <% if ("data" in COPY) { %>
