--- a/stacked_grouped_column_chart/_content.html
+++ b/stacked_grouped_column_chart/_content.html
@@ -23,7 +23,7 @@
   <% } %>
   
   <% if (COPY.labels.credit) { %>
-  <p>Credit: <%= COPY.labels.credit %></p>
+  <p> <%= COPY.labels.credit %></p>
   <% } %>
 </div>
 
