--- a/state_grid_map/_content.html
+++ b/state_grid_map/_content.html
@@ -22,7 +22,7 @@ aria-label="<%- COPY.labels.screenreader %>"
 
 <div class="footer">
   <% if (COPY.labels.source) { %><p>Source: <%= COPY.labels.source %></p><% } %>
-  <% if (COPY.labels.credit) { %><p>Credit: <%= COPY.labels.credit %></p><% } %>
+  <% if (COPY.labels.credit) { %><p> <%= COPY.labels.credit %></p><% } %>
 </div>
 
 <div id="map-template" style="display: none;">
