--- a/table/_content.html
+++ b/table/_content.html
@@ -54,6 +54,6 @@
   <% } %>
   
   <% if (COPY.labels.credit) { %>
-  <p>Credit: <%= COPY.labels.credit %></p>
+  <p> <%= COPY.labels.credit %></p>
   <% } %>
 </div>
