updating template copy

--- a/_base/_content.html
+++ b/_base/_content.html
@@ -19,7 +19,7 @@
 
 <div class="footer">
   <% if (COPY.labels.source) { %>
-  <p>Source: <%= COPY.labels.source %></p>
+  <p><%= COPY.labels.source %></p>
   <% } %>
   
   <% if (COPY.labels.credit) { %>
