--- a/annotated_line_chart/_content.html
+++ b/annotated_line_chart/_content.html
@@ -22,7 +22,7 @@
 <% } %>
 
 <div class="footer">
-  <% if (COPY.labels.source) { %><p>Source: <%= COPY.labels.source %></p><% } %>
+  <% if (COPY.labels.source) { %><p><%= COPY.labels.source %></p><% } %>
   <% if (COPY.labels.credit) { %><p><%= COPY.labels.credit %></p><% } %>
 </div>
 
