--- a/_base/_content.html
+++ b/_base/_content.html
@@ -19,10 +19,10 @@
 
 <div class="footer">
   <% if (COPY.labels.source) { %>
-  <p><%= COPY.labels.source %></p>
+  <p><%= "Source: " + COPY.labels.source %></p>
   <% } %>
   
   <% if (COPY.labels.credit) { %>
-  <p><%= COPY.labels.credit %></p>
+  <p><%= COPY.labels.credit + "/CQ Roll Call" %></p>
   <% } %>
 </div>
