--- a/column_chart/_content.html
+++ b/column_chart/_content.html
@@ -22,9 +22,14 @@ aria-label="<%- COPY.labels.screenreader %>"
 <% } %>
 
 <div class="footer">
-    <% if (COPY.labels.source) { %><p><%= COPY.labels.source %></p><% } %>
-    <% if (COPY.labels.credit) { %><p> <%= COPY.labels.credit %></p><% } %>
-</div>
+    <% if (COPY.labels.source) { %>
+    <p><%= "Source: " + COPY.labels.source %></p>
+    <% } %>
+    
+    <% if (COPY.labels.credit) { %>
+    <p><%= COPY.labels.credit + "/CQ Roll Call" %></p>
+    <% } %>
+  </div>
 
 <script type="text/javascript">
     var DATA = <%= JSON.stringify(COPY.data) %>;
