--- a/grouped_bar_chart/_content.html
+++ b/grouped_bar_chart/_content.html
@@ -22,8 +22,13 @@
 <% } %>
 
 <div class="footer">
-  <% if (COPY.labels.source) { %><p><%= COPY.labels.source %></p><% } %>
-  <% if (COPY.labels.credit) { %><p> <%= COPY.labels.credit %></p><% } %>
+  <% if (COPY.labels.source) { %>
+  <p><%= "Source: " + COPY.labels.source %></p>
+  <% } %>
+  
+  <% if (COPY.labels.credit) { %>
+  <p><%= COPY.labels.credit + "/CQ Roll Call" %></p>
+  <% } %>
 </div>
 
 <script type="text/javascript">
