--- a/embed.html
+++ b/embed.html
@@ -1,10 +1,10 @@
 <%
   if (typeof childPage == "undefined") var childPage = "";
 %>
-<p
+<div
   data-pym-loader
   data-child-src="https://<%= config.deployment.bucket %>/<%= config.deployment.prefix %>/<%= slug %>/<%= childPage %>" 
   id="responsive-embed-<%= slug + (childPage ? "-" + childPage.replace(".html", "") : "") %>">
     Loading...
-</p>
+</div>
 <script src="https://pym.nprapps.org/npr-pym-loader.v2.min.js"></script>
