--- a/_base/_content.html
+++ b/_base/_content.html
@@ -12,8 +12,7 @@
 
 <% if (COPY.labels.footnote) { %>
 <div class="footnotes">
-  <h4>Notes</h4>
-  <p><%= COPY.labels.footnote %></p>
+  <p><%= "Note: " + COPY.labels.footnote %></p>
 </div>
 <% } %>
 
