--- a/stacked_column_chart/_content.html
+++ b/stacked_column_chart/_content.html
@@ -16,8 +16,7 @@ aria-label="<%- COPY.labels.screenreader %>"
 
 <% if (COPY.labels.footnote) { %>
 <div class="footnotes">
-    <h4>Notes</h4>
-    <p><%= COPY.labels.footnote %></p>
+    <p><%= "Note: " + COPY.labels.footnote %></p>
 </div>
 <% } %>
 
