--- a/stacked_column_chart/_content.html
+++ b/stacked_column_chart/_content.html
@@ -21,14 +21,21 @@ aria-label="<%- COPY.labels.screenreader %>"
 <% } %>
 
 <div class="footer">
-    <% if (COPY.labels.source) { %>
-    <p><%= "Source: " + COPY.labels.source %></p>
-    <% } %>
-    
-    <% if (COPY.labels.credit) { %>
-    <p><%= COPY.labels.credit + "/CQ Roll Call" %></p>
-    <% } %>
-  </div>
+    <div class="row">
+        <div class="col-6">
+            <% if (COPY.labels.source) { %>
+            <p><%= "Source: " + COPY.labels.source %></p>
+            <% } %>
+
+            <% if (COPY.labels.credit) { %>
+            <p><%= COPY.labels.credit + "/FiscalNote" %></p>
+            <% } %>
+        </div>
+        <div id="credit-logo" class="col-6">
+            <img src="img/logo-deeppurple-firered.png" alt="FiscalNote logo">
+        </div>
+    </div>
+</div>
 
 <script type="text/javascript">
     var DATA = <%= JSON.stringify(COPY.data) %>;
