--- a/state_grid_map/_content.html
+++ b/state_grid_map/_content.html
@@ -20,13 +20,20 @@ aria-label="<%- COPY.labels.screenreader %>"
 <% } %>
 
 <div class="footer">
-  <% if (COPY.labels.source) { %>
-  <p><%= "Source: " + COPY.labels.source %></p>
-  <% } %>
-  
-  <% if (COPY.labels.credit) { %>
-  <p><%= COPY.labels.credit + "/CQ Roll Call" %></p>
-  <% } %>
+  <div class="row">
+    <div class="col-6">
+      <% if (COPY.labels.source) { %>
+      <p><%= "Source: " + COPY.labels.source %></p>
+      <% } %>
+
+      <% if (COPY.labels.credit) { %>
+      <p><%= COPY.labels.credit + "/FiscalNote" %></p>
+      <% } %>
+    </div>
+    <div id="credit-logo" class="col-6">
+      <img src="img/logo-deeppurple-firered.png" alt="FiscalNote logo">
+    </div>
+  </div>
 </div>
 
 <div id="map-template" style="display: none;">
